# racer

./: LICENSE  README.md  abc.txt  telemetry_03.csv
arduino/motor_shaft_encoder/: motor_shaft_encoder.ino
arduino/steering_node/: driving_logic.h  steering_node.arduino.avr.nano.elf  steering_node.arduino.avr.nano.hex  utils.h
arduino/steering_testing_node/: steering_testing_node.ino  utils.h
arduino/wheel_encoders/: wheel_encoders.ino
car-platform/: README.md
catkin_ws/src/racer/: CMakeLists.txt  package.xml
catkin_ws/src/racer/circuits/: crates.yaml  empty_gym.yaml  race_track.yaml
catkin_ws/src/racer/include/racer/: action.h  circuit.h  hash_combine.h  math.h  nearest_neighbor.h  trajectory.h  vehicle_configuration.h
catkin_ws/src/racer/include/racer/astar/: astar.h  base_search_problem.h  closed_set.h  discretized_search_problem.h  hybrid_astar.h  neighbor_transition.h  open_set.h  search.h  search_node.h  search_node_comparator.h  search_result.h  sehs.h
catkin_ws/src/racer/include/racer/astar/discretized/: base_discretization.h  search_problem.h
catkin_ws/src/racer/include/racer/astar/hybrid_astar/: discrete_state.h  discretization.h
catkin_ws/src/racer/include/racer/astar/sehs/: discrete_state.h  discretization.h  nearest_neighbor.h
catkin_ws/src/racer/include/racer/following_strategies/: dwa_strategy.h  following_strategy.h  pure_pursuit.h  pure_pursuit_strategy.h  target_error_calculator.h  target_locator.h  three_stage_dwa_strategy.h  unfolder.h
catkin_ws/src/racer/include/racer/math/: angle.h  circle.h  helpers.h  point.h  rectangle.h  vector.h
catkin_ws/src/racer/include/racer/sehs/: circle_node.h  distance_estimate.h  nearest_neighbor.h  space_exploration.h
catkin_ws/src/racer/include/racer/space_exploration/: circle_node.h  distance_estimate.h  space_exploration.h
catkin_ws/src/racer/include/racer/splines/: catmull_rom.h
catkin_ws/src/racer/include/racer/track/: analysis.h  centerline.h  circuit.h  collision_detection.h  occupancy_grid.h  racing_line.h
catkin_ws/src/racer/include/racer/vehicle/: action.h  base_model.h  base_motor_model.h  base_vehicle_model.h  chassis.h  configuration.h  motor_model.h  rpm.h  simulated_motor_model.h  steering_servo_model.h  trajectory.h  trajectory_step.h
catkin_ws/src/racer/include/racer/vehicle/kinematic/: model.h  state.h
catkin_ws/src/racer/include/racer/vehicle_model/: base_model.h  kinematic_model.h  motor_model.h  rpm.h  steering_servo_model.h
catkin_ws/src/racer/include/racer_ros/: Follower.h  Planner.h  base_planner.h  circuit_progress_monitoring.h  discretized_planner.h  follower.h  hybrid_astar_planner.h  sehs_planner.h  utils.h
catkin_ws/src/racer/launch/: agent.launch  costmap.yaml  create_map.launch  imu.launch  race.launch  ydlidar.launch
catkin_ws/src/racer/maps/: crates.pgm  crates.yaml  empty_gym.pgm  gym.yaml
catkin_ws/src/racer/scripts/: constant_action.py  max_rpm.py  racing_line_visualization.py  steering_angle_measurement.py  try_actions_for_some_time.py
catkin_ws/src/racer/src/: circuit_node.cpp  current_state_node.cpp  planning_node.cpp  racing_line_planning_node.cpp  trajectory_following_node.cpp  visualize_action.cpp  visualize_carrot.cpp  visualize_plan.cpp
commander-ubuntu/: Dockerfile  README.md  initialize.bash  start-access-point.sh  start-container.sh
commander-ubuntu/src/: Dockerfile  initialize.bash
controller-arduino/: README.md
controller-arduino/steering/: driving_logic.h  rc_input.h  steering.ino  steering_node.ino  utils.h
controller-arduino/steering_node/: driving_logic.h  rc_input.h  steering_node.ino  utils.h
controller-arduino/steering_testing_node/: driving_logic.h  steering_testing_node.ino  utils.h
controller-arduino/wheel-encoders/: wheel_encoders.ino
experiments/algorithm-testing/: .gitignore  Makefile  analyze_benchmark.ipynb
experiments/motor-rpm-experiment/: evolution-config.ini  fit_0.eps  fit_11271.eps  fit_2000.eps  fit_4000.eps  lukas_02.csv  pure-pursuit.csv  rpm-simulator.ipynb  rpm.ipynb  telemetry.csv  telemetry_04.csv  telemetry_05.csv  telemetry_06.csv  telemetry_07.csv  telemetry_highspeed.csv  telemetry_lowspeed.csv
experiments/servo-pwm-to-steering-angle/: simulator_steering_angle_to_signal.ipynb  steering_angle_to_pwm.eps  steering_angle_to_pwm.ipynb
experiments/servo-setting-time-experiment/: 1200-1800.aup  1300-1700.aup  1300-1700.txt  1350-1650.aup  1350-1650.txt  1400-1600.txt  1400-1600.txt.bak
experiments/simulator/: results.md
experiments/simulator-motor-rpm/: rpm-simulator.ipynb
experiments/simulator-servo-setting-time/: adjustments.csv  errors-0.5-0.5.csv  setting-time-model.ipynb  simulated-servo-setting-time.ipynb  states-0.85-0.85.csv  states.csv  steering-adjustment-times.csv
experiments/simulator-steering-angle/: Steering angle model.ipynb  input_and_radius.csv  steering_angle_longer.csv
racer-jetson/: .bashrc  LICENSE
racer-jetson/catkin_ws/src/racer_sensors/: CMakeLists.txt  package.xml
racer-jetson/catkin_ws/src/racer_sensors/include/racer_sensors/: OdometrySubject.h  VehicleModel.h  VehicleState.h  odometry_subject.h
racer-jetson/catkin_ws/src/racer_sensors/src/: OdometrySubject.cpp  VehicleModel.cpp  odometry_node.cpp  odometry_subject.cpp
racer-raspberry/: README.md  build-and-run.sh  first-raspberry-setup.sh  readme.md  start-docker.sh
racer-raspberry/src/: Dockerfile  initialize.bash
racer-raspberry/src/joystick_controller/: CMakeLists.txt  CMakeLists.xml  package.xml
racer-raspberry/src/joystick_controller/launch/: joy-control.launch
racer-raspberry/src/joystick_controller/src/: JoystickTransformer.cpp  JoystickTransformer.h  JoystickTrasnformer.cpp  controller.cpp  joystick_controller_node.cpp
racing-cpp/: Display trajectory.ipynb  Racing.sln
racing-cpp/Racing/: Racing.vcxproj  Racing.vcxproj.filters
standalone-experiments/: Makefile
standalone-experiments/src/: analyze_track.cpp  analyze_track_benchmark.cpp
thesis/: .gitignore  README  README.md
thesis/en/: Makefile  (+13 more)
ubuntu/: mapping.rviz  race.rviz  rviz-localization.sh  rviz-race
(+774 files in other folders)
